@@ -45,11 +45,32 @@ public class ElementsTest {
         assertTrue(ps.hasAttr("class"));
         assertFalse(ps.hasAttr("style"));
     }
+
+    @Test public void hasAbsAttr() {
+        Document doc = Jsoup.parse("<a id=1 href='/foo'>One</a> <a id=2 href='http://jsoup.org'>Two</a>");
+        Elements one = doc.select("#1");
+        Elements two = doc.select("#2");
+        Elements both = doc.select("a");
+        assertFalse(one.hasAttr("abs:href"));
+        assertTrue(two.hasAttr("abs:href"));
+        assertTrue(both.hasAttr("abs:href")); // hits on #2
+    }
     
     @Test public void attr() {
         Document doc = Jsoup.parse("<p title=foo><p title=bar><p class=foo><p class=bar>");
         String classVal = doc.select("p").attr("class");
         assertEquals("foo", classVal);
+    }
+
+    @Test public void absAttr() {
+        Document doc = Jsoup.parse("<a id=1 href='/foo'>One</a> <a id=2 href='http://jsoup.org'>Two</a>");
+        Elements one = doc.select("#1");
+        Elements two = doc.select("#2");
+        Elements both = doc.select("a");
+
+        assertEquals("", one.attr("abs:href"));
+        assertEquals("http://jsoup.org", two.attr("abs:href"));
+        assertEquals("http://jsoup.org", both.attr("abs:href"));
     }
 
     @Test public void classes() {
